--- a/Makefile.tlb
+++ b/Makefile.tlb
@@ -1,6 +1,6 @@
 # $Id$
 
-SUBDIRS = friheden applikationer admin program web sikkerhed c docbook kontorbruger itplatform
+SUBDIRS = friheden applikationer admin program web sikkerhed c dokumentation kontorbruger itplatform
 
 all: filer
 
