--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -168,8 +168,8 @@ endif
 	rm -rf bog1
 
 # Build pdf package.
-pspdf: $(targetname)-$(version)_pdf.zip
-$(targetname)-$(version)_pdf.zip: $(sgmlfiler)
+pspdf: $(targetname)-$(version).pdf
+$(targetname)-$(version).pdf: $(sgmlfiler)
 	rm -rf bogps bogpdf stikord.sgml tempdir magic.sgml
 	rm -f $(targetname)-*.pdf*    
 	rm -f $(targetname)-*_pdf.zip
@@ -197,7 +197,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
-	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
+#	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
 	@echo "Done PDF (pspdf)"
 	@echo ""
 
