--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -213,7 +213,7 @@ $(targetname)-$(version).pdf: $(sgmlfiler)
 	@echo "Done PS (pspdf)"
 	@echo ""
 
-	rm -f $(targetname)-$(version).pdf
+#	rm -f $(targetname)-$(version).pdf
 #	rm -f $(targetname)-*.ps              
 	rm -rf bogps bogpdf
 
