Tilbage til zip af pdf

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -197,7 +197,7 @@ $(targetname)-$(version).pdf: $(sgmlfiler)
 	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
-#	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
+	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
 	@echo "Done PDF (pspdf)"
 	@echo ""
 
@@ -213,7 +213,7 @@ $(targetname)-$(version).pdf: $(sgmlfiler)
 	@echo "Done PS (pspdf)"
 	@echo ""
 
-#	rm -f $(targetname)-$(version).pdf
+	rm -f $(targetname)-$(version).pdf
 #	rm -f $(targetname)-*.ps              
 	rm -rf bogps bogpdf
 
