Problemer med at slette gamle versioner

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -14,7 +14,7 @@ locdirname:=$(shell pwd)
 # Kort navn
 targetshortname:=$(notdir $(locdirname))
 
-# Med linux- foran
+# Med linuxbog- foran
 targetname:=linuxbog-$(notdir $(locdirname))
 
 # version
@@ -114,6 +114,7 @@ pakhtml:
 html: bog/index.html 
 bog/index.html: $(sgmlfiler) 
 	@echo "Target er HTML i" $(targetshortname)/bog
+	rm $(targetname)*
 	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir tempdir
@@ -236,5 +237,5 @@ endif
 
 
 clean:
-	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz $(targetshortname)
+	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt 
 	@echo Cleaning.
