--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -138,6 +138,7 @@ else
 endif
 	(cd bog;rm -f apprevhist.html;ln -sf *apprevhist.html apprevhist.html)
 	make pakhtml
+	rm -rf tempdir 
 	@echo "Done HTML (html)"
 	@echo ""
 
@@ -215,7 +216,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 
 	rm -f $(targetname)-$(version).pdf
 #	rm -f $(targetname)-*.ps              
-	rm -rf bogps bogpdf
+	rm -rf bogps bogpdf tempdir
 
 
 test:
