Der er hul igennem på Red Hat 7.2

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -48,7 +48,7 @@ plucker:=$(wildcard /usr/bin/plucker-build)
 tidy:=$(wildcard /usr/bin/tidy)
 
 # Cygnus path
-cygnus:=$(firstword $(wildcard /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl))
+cygnus:=$(firstword $(wildcard /usr/share/sgml/docbook/utils-0.6.9/docbook-utils.dsl /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl))
 
 # Image Magick convert
 ImageMagickconvert:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/convert))
