--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -24,7 +24,7 @@ version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | tail -n 1 |
 dato:=$(shell date +%d/%m-%Y> dato.sgml; cat dato.sgml)
 
 # Her er en liste af sgml-filer der ændres automatisk
-badsgmlfiles=dato.sgml version.sgml magic.sgml stikord.sgml
+badsgmlfiles=dato.sgml version.sgml magic.sgml stikord.sgml bogoversigt.sgml ophavsret.sgml
 
 # Her er  en liste af alle sgml
 allesgmlfiles:=$(wildcard *.sgml)
