--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -87,7 +87,10 @@ ifneq   ("$(plucker)","")
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
-	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb  )
+	cp ../misc/*.pdb palm
+	cp ../misc/gpl.txt palm
+	cp ../misc/plucker.txt palm
+	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb palm/*txt )
 else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
