--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -123,7 +123,7 @@ bog/index.html: $(sgmlfiler)
 	mkdir tempdir
 	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	cp *.sgml tempdir
-	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
+	(cd tempdir; jade -t sgml -E 1 -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
 	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml tempdir/HTML.index
 	rm -rf tempdir
 	db2html bog.sgml
