--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -90,6 +90,7 @@ ifneq   ("$(plucker)","")
 	cp ../misc/*.prc palm
 	cp ../misc/*.pdb palm
 	cp ../misc/gpl.txt palm
+	cp ../misc/.cvsignore palm
 	cp ../misc/plucker.txt palm
 	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb palm/*txt )
 else
