Support for lokale makefiler

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -54,7 +54,7 @@ cygnus:=$(firstword $(wildcard /usr/share/sgml/docbook/utils-0.6.9/docbook-utils
 ImageMagickconvert:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/convert))
 
 # her er det der skal laves
-all: start html pspdf palmpilot sgml eksempelbackup stop
+all: start ekstra html pspdf palmpilot sgml eksempelbackup stop
 
 start:
 	@echo "-------------------------------------------"
@@ -71,6 +71,9 @@ stop:
 
 version:
 	@echo $(targetshortname) $(version)
+
+ekstra:
+	make -f Makefile_local
 
 # Build the sgml package
 sgml: $(targetname)-$(version).sgml.tar.gz
