dockumentations-hack til Hans

--- a/dokumentation/Makefile_local
+++ b/dokumentation/Makefile_local
@@ -1,7 +1,7 @@
 # $Id$
 
 all: 
-	cat *.sgml | ./usedtags.pl | sort -nr > usedtags_inc.sgml
+	cat *.sgml | ./usedtags.pl | sort -nr > usedtags.inc
 
 clean:
 	rm -f usedtags_inc.sgml
