Adderet nyt bog om digital signatur fra Mads Dydensborg

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -261,4 +261,6 @@ endif
 
 clean:
 	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
+	@make -f Makefile_local clean
+
 	@echo Cleaning.
