Rettet syntaksfejl. Sørget for at billederne kommer med i HTML-udgaven.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -3,7 +3,9 @@ all: html pdf
 html: stikord dato udgave
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir -p bog
+	cp -p images/*.png bog/
 	xmlto -o bog html bog.sgml
+	tidy -mq bog/*.html
 
 pdf: stikord dato udgave
 	echo '<!ENTITY magic "eps">' > magic.sgml
