Bygger HTML-udgaven og retter op på syntaksen.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -5,7 +5,7 @@ html: stikord dato udgave
 	mkdir -p bog
 	cp -p images/*.png bog/
 	xmlto -o bog html bog.sgml
-	tidy -mq bog/*.html
+	tidy -mq bog/*.html || tidy -mq bog/*.html || true
 
 pdf: stikord dato udgave
 	echo '<!ENTITY magic "eps">' > magic.sgml
